--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -3,7 +3,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 import ProductCard from "../components/ProductCard.astro";
 
-import { products } from "../data/products.js";
+import { products } from "../data/product/products.js";
 ---
 
 <MainLayout title="Gou Products">
