--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,9 +1,9 @@
 ---
 import MainLayout from "../../layouts/MainLayout.astro";
-
 import BlogCard from "../../components/BlogCard.astro";
+import { getAllBlogs } from "../../lib/content.js";
 
-import { blogs } from "../../data/blog.js";
+const blogs = await getAllBlogs();
 ---
 
 <MainLayout title="Blog">
