Enable real admin CMS

--- a/src/components/CowCard.astro
+++ b/src/components/CowCard.astro
@@ -32,6 +32,7 @@ Status: {cow.status}
 
 <br>
 
+<div class="cow-card-actions">
 <a href={`/cows/${cow.slug}`} class="btn btn-outline">
 View Details
 </a>
@@ -44,5 +45,6 @@ class="btn btn-primary">
 Sponsor Cow
 
 </a>
+</div>
 
 </div>
