--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,7 +2,11 @@
 
 ---
 
-<nav class="nav-links">
+<div class="nav-shell">
+<input id="nav-toggle" type="checkbox" class="nav-toggle-checkbox" />
+<label for="nav-toggle" class="nav-toggle-btn">Menu</label>
+
+<nav id="site-nav" class="nav-links">
 
 <a href="/">Home</a>
 
@@ -56,3 +60,4 @@ Support full monthly care
 <a href="/contact">Contact</a>
 
 </nav>
+</div>
