--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -31,7 +31,8 @@ const { blog } = Astro.props;
 
 <img
 src={blog.image}
-style="width:100%; max-width:700px; border-radius:12px;">
+class="detail-image"
+alt={blog.title}>
 
 <br><br>
 
