--- a/src/pages/cows/[slug].astro
+++ b/src/pages/cows/[slug].astro
@@ -19,13 +19,14 @@ const { cow } = Astro.props;
 
 <div class="container">
 
-<div class="grid">
+<div class="detail-grid">
 
 <div>
 
 <img
 src={cow.image}
-style="width:100%; border-radius:12px;">
+class="detail-image"
+alt={cow.name}>
 
 </div>
 
